sm8350: DPU fails to draw to samsung-amb670yf01 panel
Hi all! I'm working on display bringup for oneplus-lemonadep (OnePlus 9 Pro), which has a Samsung AMB670YF01 panel being driven at 3216x1440x120Hz. Upon enabling the panel and it resetting, dmesg fills up with errors from the DPU:
[ 85.265717] [drm:dpu_core_perf_crtc_check:200] [dpu error]exceeds bandwidth: 2887911112kb > 15500000kb
[ 85.265729] [drm:dpu_crtc_atomic_check:1235] [dpu error]crtc83 failed performance check -7
(repeated ad nauseam). I first thought to apply this, but no change. Trying to revert these patches also didn't work (but with a different failure mode; the device became entirely unresponsive after display reset), though I could get dmesg over UART out for this if that would be hepful.
I also tried to override the check for bandwidth and make it always okay, but that just resulted in another failure, so the issue (probably) isn't the bandwidth calculation
My current driver is this, config is this, devicetree is this, and downstream qcom driver is this (along with a slightly-more-helpful but for my usecase, incorrectly configured driver for a similar panel - similar enough that the same init sequence works on mine - here).